[gd_scene load_steps=9 format=4 uid="uid://d01cjwopboxhv"]

[ext_resource type="Texture2D" uid="uid://bj2sc6xcdrnmm" path="res://Assets/sprites/world_tileset.png" id="1_kosem"]
[ext_resource type="Script" path="res://Scripts/game_multi.gd" id="1_wwbyi"]
[ext_resource type="PackedScene" uid="uid://dmc5riwk8i3e2" path="res://Scenes/killzone.tscn" id="3_e6wtb"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3y4if"]
texture = ExtResource("1_kosem")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -0.375, -8, -0.5, -0.875, -8, -1)
9:0/0/physics_layer_0/polygon_1/points = PackedVector2Array(0.75, -6.75, 8, -6.875, 8, 0, 0.75, -0.125)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.125, -0.75, -6.125, -0.5, 0.75, -8, 0.75)
10:0/0/physics_layer_0/polygon_1/points = PackedVector2Array(0.625, -6, 8, -5.625, 8, 1.125, 0.75, 1.25)
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.875, -0.5, -6.75, -0.375, -0.125, -8, -0.125)
11:0/0/physics_layer_0/polygon_1/points = PackedVector2Array(0, -8, 8, -8, 8, -1.25, 0.25, -0.875)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -0.375, -8, -0.5, -0.875, -8, -1)
9:1/0/physics_layer_0/polygon_1/points = PackedVector2Array(0.75, -6.75, 8, -6.875, 8, 0, 0.75, -0.125)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.125, -0.75, -6.125, -0.5, 0.75, -8, 0.75)
10:1/0/physics_layer_0/polygon_1/points = PackedVector2Array(0.625, -6, 8, -5.625, 8, 1.125, 0.75, 1.25)
11:1/0 = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.875, -0.5, -6.75, -0.375, -0.125, -8, -0.125)
11:1/0/physics_layer_0/polygon_1/points = PackedVector2Array(0, -8, 8, -8, 8, -1.25, 0.25, -0.875)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -0.375, -8, -0.5, -0.875, -8, -1)
9:2/0/physics_layer_0/polygon_1/points = PackedVector2Array(0.75, -6.75, 8, -6.875, 8, 0, 0.75, -0.125)
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.125, -0.75, -6.125, -0.5, 0.75, -8, 0.75)
10:2/0/physics_layer_0/polygon_1/points = PackedVector2Array(0.625, -6, 8, -5.625, 8, 1.125, 0.75, 1.25)
11:2/0 = 0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.875, -0.5, -6.75, -0.375, -0.125, -8, -0.125)
11:2/0/physics_layer_0/polygon_1/points = PackedVector2Array(0, -8, 8, -8, 8, -1.25, 0.25, -0.875)
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
2:4/size_in_atlas = Vector2i(3, 3)
2:4/0 = 0

[sub_resource type="TileSet" id="TileSet_yym6b"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_3y4if")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_p2a7m"]
normal = Vector2(1, 0)
distance = 2.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ddc58"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_tk687"]
distance = 3.0

[node name="game_multi" type="Node2D"]
script = ExtResource("1_wwbyi")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
limit_bottom = 80
position_smoothing_enabled = true

[node name="players" type="Node" parent="."]

[node name="Map" type="Node" parent="."]

[node name="Mid" type="TileMapLayer" parent="Map"]
z_index = 1
use_parent_material = true
tile_map_data = PackedByteArray("AAD3/wIAAAAAAAAAAAD3/wMAAAAAAAEAAAD3/wQAAAAAAAEAAAD4/wIAAAAAAAAAAAD4/wMAAAAAAAEAAAD4/wQAAAAAAAEAAAD5/wIAAAAAAAAAAAD5/wMAAAAAAAEAAAD5/wQAAAAAAAEAAAD6/wIAAAAAAAAAAAD6/wMAAAAAAAEAAAD6/wQAAAAAAAEAAAD7/wIAAAAAAAAAAAD7/wMAAAAAAAEAAAD7/wQAAAAAAAEAAAD8/wIAAAAAAAAAAAD8/wMAAAAAAAEAAAD8/wQAAAAAAAEAAAD9/wIAAAAAAAAAAAD9/wMAAAAAAAEAAAD9/wQAAAAAAAEAAAD+/wIAAAAAAAAAAAD+/wMAAAAAAAEAAAD+/wQAAAAAAAEAAAD//wIAAAAAAAAAAAD//wMAAAAAAAEAAAD//wQAAAAAAAEAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAEAAAAAAAQAAAAAAAEAAAABAAIAAAAAAAAAAAABAAMAAAAAAAEAAAABAAQAAAAAAAEAAAACAAIAAAAAAAAAAAACAAMAAAAAAAEAAAACAAQAAAAAAAEAAAADAAIAAAAAAAAAAAADAAMAAAAAAAEAAAADAAQAAAAAAAEAAAAEAAIAAAAAAAAAAAAEAAMAAAAAAAEAAAAEAAQAAAAAAAEAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAEAAAAFAAQAAAAAAAEAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAEAAAAGAAQAAAAAAAEAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAEAAAAHAAQAAAAAAAEAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAEAAAAIAAQAAAAAAAEAAAA=")
tile_set = SubResource("TileSet_yym6b")

[node name="Bound" type="CharacterBody2D" parent="Map"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/Bound"]
position = Vector2(-147, 0)
shape = SubResource("WorldBoundaryShape2D_p2a7m")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Map/Bound"]
position = Vector2(145, -1)
shape = SubResource("WorldBoundaryShape2D_ddc58")

[node name="killzone" parent="Map" instance=ExtResource("3_e6wtb")]
position = Vector2(-3, 83)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Map/killzone"]
shape = SubResource("WorldBoundaryShape2D_tk687")

[node name="UI" type="CanvasGroup" parent="."]

[node name="create" type="Button" parent="UI"]
offset_left = -144.0
offset_top = -82.0
offset_right = -72.0
offset_bottom = -51.0
scale = Vector2(0.5, 0.5)
text = "创建游戏
"

[node name="join" type="Button" parent="UI"]
offset_left = -107.0
offset_top = -82.0
offset_right = -35.0
offset_bottom = -51.0
scale = Vector2(0.5, 0.5)
text = "加入游戏
"

[node name="ip_panel" type="Panel" parent="UI"]
visible = false
offset_left = -41.0
offset_top = -29.0
offset_right = 44.0
offset_bottom = 9.0

[node name="ip_input" type="LineEdit" parent="UI/ip_panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 3.0
offset_right = 159.0
offset_bottom = 34.0
scale = Vector2(0.5, 0.5)
text = "127.0.0.1"

[node name="confirm_button" type="Button" parent="UI/ip_panel"]
layout_mode = 0
offset_left = 5.0
offset_top = 21.0
offset_right = 67.0
offset_bottom = 52.0
scale = Vector2(0.5, 0.5)
text = "确认"

[node name="back_button" type="Button" parent="UI/ip_panel"]
layout_mode = 0
offset_left = 48.0
offset_top = 21.0
offset_right = 110.0
offset_bottom = 52.0
scale = Vector2(0.5, 0.5)
text = "取消
"

[node name="connect_timeout_timer" type="Timer" parent="UI/ip_panel"]

[node name="info_bar" type="RichTextLabel" parent="UI"]
z_index = 1145
offset_left = 11.0
offset_top = -65.0
offset_right = 277.0
offset_bottom = 27.0
scale = Vector2(0.5, 0.5)
scroll_following = true
text_direction = 2

[node name="info_input" type="LineEdit" parent="UI"]
offset_left = 42.0
offset_top = -82.0
offset_right = 246.0
offset_bottom = -51.0
scale = Vector2(0.5, 0.5)

[node name="info_send_button" type="Button" parent="UI"]
offset_left = 12.0
offset_top = -82.0
offset_right = 70.0
offset_bottom = -52.0
scale = Vector2(0.5, 0.5)
text = "发送"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Scenes/player.tscn")
spawn_path = NodePath("../players")

[connection signal="button_down" from="UI/create" to="." method="_on_create_button_down"]
[connection signal="button_down" from="UI/join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="UI/ip_panel/confirm_button" to="." method="_on_confirm_button_button_down"]
[connection signal="button_down" from="UI/ip_panel/back_button" to="." method="_on_back_button_button_down"]
[connection signal="timeout" from="UI/ip_panel/connect_timeout_timer" to="." method="_on_connect_timeout_timer_timeout"]
[connection signal="button_down" from="UI/info_send_button" to="." method="_on_info_send_button_button_down"]
